[package]
name = "freedomnet"
version = "0.2.0"
edition = "2021"
description = "DPI bypass proxy + VPN config generator. No remote server needed for proxy mode."
license = "MIT"

[[bin]]
name = "fn"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
clap        = { version = "4",    features = ["derive"] }
reqwest     = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow      = "1"

[profile.release]
opt-level   = 3
strip       = true
lto         = true
codegen-units = 1
