[package]
name = "freedomnet"
version = "0.3.0"
edition = "2021"
description = "DPI bypass proxy + VPN config generator. No VPN server needed for proxy mode."
license = "MIT"
build = "build.rs"

[[bin]]
name = "fn"
path = "src/main.rs"

[dependencies]
tokio      = { version = "1",    features = ["full"] }
clap       = { version = "4",    features = ["derive"] }
reqwest    = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow     = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
cc = "1"

[profile.release]
opt-level     = 3
strip         = true
lto           = true
codegen-units = 1
